components/sidebar/ConversationHistory.module.css
.conversationHistory {
    position: relative;
    margin: 0;
    padding: 2rem 1rem;
}

.conversation {
    display: flex;
    align-items: center;
    list-style: none;
    cursor: pointer;
    padding: 0.5rem;
    border-radius: 0.5rem;
    font-size: 0.875rem;
}

.conversation:hover,
.conversation.highlighted {
    background-color: var(--tertiary-background-color);
}

.skillCodeContainer {
    flex-shrink: 0;
    width: 1.5rem;
    margin-right: 0.75rem;
}

.skillCode {
    color: var(--secondary-foreground-color);
    font-weight: bold;
}

.conversationName {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.trashcanIcon {
    display: none;
    margin-left: auto;
    vertical-align: middle;
    width: 1rem;
    height: 1rem;
    stroke: var(--secondary-foreground-color);
    flex-shrink: 0;
    transition: stroke 0.15s ease;
}

.conversation:hover .trashcanIcon {
    display: inline-block;
}

.trashcanIcon:hover {
    stroke: var(--secondary-color);
}

.centerContainer {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.loadingSpinner,
.conversationIcon {
    width: 2rem;
    height: 2rem;
}

.loadingSpinner {
    stroke: var(--secondary-foreground-color);
    animation: spin 1s linear infinite;
}

@keyframes spin {
    0% { transform: rotate(0deg); }
    100% { transform: rotate(360deg); }
}

.tipContainer {
    display: flex;
    align-items: center;
    gap: 1rem;
    padding: 2rem;
}

.conversationIcon {
    flex-shrink: 0;
    fill: var(--secondary-foreground-color);
}

.tip {
    margin: 0;
    white-space: pre;
    color: var(--secondary-foreground-color);
}

@media only screen and (max-width: 768px) {
    .conversationHistory {
        padding: 1rem;
    }
    
    .trashcanIcon {
        display: inline;
    }
}

